Diseño del footer y header

--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
             height: auto;
         }
 
+        .container-fluid a {
+            color: #000;
+            /* Color de los enlaces */
+            text-decoration: none;
+            /* Sin subrayado en los enlaces */
+        }
+
+        .container-fluid a:hover {
+            text-decoration: underline;
+            /* Subrayado al pasar el mouse sobre los enlaces */
+        }
+
         #productos-container {
             text-align: center;
         }
@@ -259,6 +271,19 @@
 
         .product {
             border: #CCCCCC 1px solid;
+        }
+
+        footer {
+            background-color: #660303;
+            /* Color de fondo */
+            color: #fff;
+            /* Color del texto */
+            text-align: center;
+            /* Alineación del texto */
+            padding: 10px 0;
+            /* Espaciado interno */
+            border-top: 1px solid #e4e4e4;
+            /* Borde superior */
         }
     </style>
 </head>
