--- a/index.html
+++ b/index.html
@@ -272,6 +272,13 @@
         .product {
             border: #CCCCCC 1px solid;
         }
+        footer {
+    background-color: #600303; /* Color de fondo */
+    color: #fff; /* Color del texto */
+    text-align: center; /* Alineación del texto */
+    padding: 10px 0; /* Espaciado interno */
+    border-top: 1px solid #e4e4e4; /* Borde superior */
+}
     </style>
 </head>
 
