--- a/product2.html
+++ b/product2.html
@@ -195,7 +195,7 @@
     }
 
     document.addEventListener("DOMContentLoaded", function () {
-      fetch('productos_1.json')
+      fetch('json/producto2.json')
         .then(response => response.json())
         .then(data => {
           const productName = document.getElementById('product-name');
