--- a/Resultados.html
+++ b/Resultados.html
@@ -66,11 +66,11 @@
             top: 0;
         }
         footer {
-            margin-top: 50px;
-            text-align: center;
-            background-color: #343a40;
-            color: #fff;
-            padding: 10px 0;
+          background-color: #600303;
+          text-align: center;
+          color: #fff;
+          padding: 10px 0;
+          border-top:1px solid #e4e4e4;
         }
     </style>
 </head>
