--- a/product3.html
+++ b/product3.html
@@ -125,7 +125,7 @@
   <div class="container">
     <div id="producto" class="product-container">
       <div class="product-image">
-        <img id="product-image" src="" alt="">
+        <img id="product-image" src="" alt="" style="width: 500px; height: 500px;">
       </div>
       <div class="product-details">
         <h1 id="product-name"></h1>
