--- a/Catalogo.html
+++ b/Catalogo.html
@@ -243,8 +243,9 @@
 
                     </ul>
 
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+                    <form class="d-flex" action="Resultados.html" method="GET">
+                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search"
+                            name="query">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                     <!-- Sección de inicio de sesión -->
