--- a/Resultados.html
+++ b/Resultados.html
@@ -123,10 +123,14 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Categorías
+                                Quienes somos:
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Servicios</a></li>
+                                <li><a class="dropdown-item">FiesTop es una empresa centrada en la organizacion de
+                                        eventos sociales <br> de cualquier indole desde fiestas de cumpleaños hasta
+                                        fiestas de XV años y bodas <br> el limite es su imaginación, nosotros le daremos
+                                        las herramientas necesarias <br> para que organice su fiesta ideal en tiempo y
+                                        forma</a></li>
                                 <li><a class="dropdown-item" href="#"></a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -134,29 +138,20 @@
                                 <li><a class="dropdown-item" href="#"></a></li>
                             </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Quiénes somos
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item">FiesTop es una empresa centrada en la organización de
-                                        eventos sociales
-                                        <br> de cualquier índole desde fiestas de cumpleaños hasta fiestas de XV años y
-                                        bodas
-                                        <br> el límite es su imaginación, nosotros le daremos las herramientas
-                                        necesarias
-                                        <br> para que organice su fiesta ideal en tiempo y forma</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#"></a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#"></a></li>
-                            </ul>
+
+                        <!-- Carrito -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
                         </li>
+
+                        <!-- Lista de deseos -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="wishlist.html">Lista de deseos</a>
+                        </li>
+
                     </ul>
+
+
                     <form class="d-flex" action="Resultados.html" method="GET">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search"
                             name="query">
