--- a/wishlist.html
+++ b/wishlist.html
@@ -179,7 +179,7 @@
                         </li>
 
                     </ul>
-                    <form class="d-flex" action="resultados.html" method="GET">
+                    <form class="d-flex" action="Resultados.html" method="GET">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search"
                             name="query">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
