--- a/product5.html
+++ b/product5.html
@@ -112,10 +112,11 @@
             <a class="nav-link" href="Catalogo.html">Todos los productos</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+        <form class="d-flex" action="Resultados.html" method="GET">
+          <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search"
+              name="query">
           <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
+      </form>
       </div>
     </div>
   </nav>
