--- a/index.html
+++ b/index.html
@@ -197,6 +197,24 @@
             padding: 0;
         }
 
+        .btnproducto {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btnproducto:hover {
+    background-color: #45a049;
+}
+
+
         /**/
 
         #cb-cookie-banner {
@@ -420,7 +438,6 @@
                         card.classList.add('card');
 
                         var enlaceImagen = document.createElement('a');
-                        enlaceImagen.href = 'product.html';
                         var imagen = document.createElement('img');
                         imagen.src = producto.imagen;
                         imagen.alt = producto.nombre;
