--- a/Catalogo.html
+++ b/Catalogo.html
@@ -15,6 +15,17 @@
             z-index: 1000000;
             top: 0;
         }
+        .container-fluid a {
+            color: #000;
+            /* Color de los enlaces */
+            text-decoration: none;
+            /* Sin subrayado en los enlaces */
+        }
+
+        .container-fluid a:hover {
+            text-decoration: underline;
+            /* Subrayado al pasar el mouse sobre los enlaces */
+        }
 
         .container {
             text-align: center;
