Updated FAQ link

--- a/FAQs.html
+++ b/FAQs.html
@@ -16,6 +16,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <style>
+        .navbar {
+            position: fixed;
+            width: 100%;
+            z-index: 1000000;
+            top: 0;
+        }
+
         .divider {
             width: 100%;
             height: 1.5rem;
@@ -191,7 +198,8 @@
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
                                 somos</a></li>
-                        <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">Preguntas Frecuentes</a></li>
+                        <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">Preguntas
+                                Frecuentes</a></li>
                     </ul>
                 </div>
 
