--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -588,7 +587,7 @@
                         <ul class="nav flex-column">
                             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
                                     somos</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">Preguntas Frecuentes</a></li>
                         </ul>
                     </div>
 
