--- a/wishlist.html
+++ b/wishlist.html
@@ -320,7 +320,7 @@
                    <ul class="nav flex-column">
                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
                                somos</a></li>
-                       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                       <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">FAQs</a></li>
                    </ul>
                </div>
 
